AC_INIT([atrack],[0.1.0],[dbru997@gmail.com])
AC_CONFIG_SRCDIR(src/main.cpp)
p
AC_PROG_CXXCPP
AC_PROG_CXX
AM_INIT_AUTOMAKE
AC_LANG([C++])

# Autoupdate added the next two lines to ensure that your configure
# script's behavior did not change.  They are probably safe to remove.
AC_CHECK_INCLUDES_DEFAULT
AC_PROG_EGREP

AC_CHECK_HEADERS([string])
AC_CHECK_HEADERS([iostream])
AC_CONFIG_FILES([Makefile src/Makefile])

AC_OUTPUT
