AM_CXXFLAGS=-std=c++14

bin_PROGRAMS = atrack
atrack_SOURCES = main.cpp tracker.cpp interface.cpp assignment.cpp date.cpp string_utility.cpp

include_HEADERS = tracker.h interface.h assignment.h date.h string_utility.h


# noinst_LIBARARIES = tracker.a interface.a assignment.a date.a string_utility.a
